--- a/navigation.html
+++ b/navigation.html
@@ -10,7 +10,7 @@
     <nav id="menu">
       <!-- Desktop Navigation -->
       <ul>
-        <li class="selected"><a href="#home">Home</a></li>
+        <li class="selected"><a href="https://google.com">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#services">Services</a></li>
@@ -23,5 +23,6 @@
   </header>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
+<script src="js/navigation.js" charset="utf-8"></script>
 </body>
 </html>
